20000130-17:05 GMT+3 Alexander Kresin
  * source/pp/hbpp.c
    * Bug fixed, noted by Ryszard Glab

20000130-13:55 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
	* fixed support for macro variables used in FOR statement
	
    *source/vm/hvm.c
	* private variables created during a macro evaluation are not
	released after a macro evaluation. They have the function/procedure
	scope.

20000129-19:15 GMT+1 Victor Szel <info@szelvesz.hu>
  * bin/bld_tpl.*
    ! Added macro lib.
    ! Fix for os2 platform.
  * source/rtl/tget.prg
    - Removed #include "set.ch" since it's included by default (via std.ch)
  * source/rtl/Makefile
    source/rtl/memoline.c
    source/rtl/filesys.c
    * Some minor formatting fixes.

20000129-14:30  GMT+3 Luiz Rafael Culik <culik@sl.conex.net>
    *source/rtl/oemansi.c
        *Added documentation to HB_oemtoansi() and Hb_ansitooem() 
    *source/rtl/strings.c
         *Added documentation to AT(),RAT(),ISDIGIT(),ISALPHA(),ISLOWER(),ISUPPER()

20000129-13:20 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *include/hbexpr.c
    *source/compiler/expropt.c
    *source/macro/macro.c
        * empty list expression is not allowed now - this generates
        syntax error:  funcall( ()->expression, () )

    *source/compiler/harbour.l
    *source/compiler/harbour.y
        * fixed support for STEP and TO keywords
	* fixed GPF (core dump) if field variable is used in a codeblock

20000129-01:55 EST Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
    + source/rtl/oemansi.c

20000128-20:15 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/macro/macro.l
    *source/compiler/harbour.l
	* any nonstandard characters (ASCII < 32 and ASCII > 127) are 
	passed to grammar analyser instead of printing on stdout
	
    *include/hbexpr.c
    *source/macro/macro.c
    *source/compiler/expropt.c
	* memory is released properly when more complex expression
	is macro compiled eg. &( "1 + 2" ), &( ".T.:classname" )
